--- a/redakcni system/MainWindow.xaml
+++ b/redakcni system/MainWindow.xaml
@@ -5,6 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:redakcni_system"
         mc:Ignorable="d"
+        ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Button Content="Nový článek" HorizontalAlignment="Left" Margin="155,217,0,0" VerticalAlignment="Top" Height="72" Width="148" Click="Button_Click"/>
